Fix text overflow in hero menu

--- a/sass/partial/_hero.sass
+++ b/sass/partial/_hero.sass
@@ -168,9 +168,11 @@
   span
     box-sizing: border-box
     width: calc(100% - 5px)
+    max-height: 4.2em
     padding: 0 15px
     line-height: 21px
     font-size: 13px
+    overflow: hidden
     +transition(font-size .3s)
     +desktop
       font-size: 15px
